# freebrain

./: .gitignore  OpenManipulator-X_자율학습브레인_제안서 (1).md  PROGRESS.md  README.md  plan.md  requirements.txt  setup_env.sh
src/freebrain_bringup/: package.xml  setup.cfg  setup.py
src/freebrain_cognitive/: package.xml  setup.cfg  setup.py
src/freebrain_description/: package.xml  setup.cfg  setup.py
src/freebrain_description/mjcf/: open_manipulator_x.xml  tabletop_scene.xml
src/freebrain_description/urdf/: open_manipulator_x.urdf.xacro  open_manipulator_x_robot.urdf.xacro
src/freebrain_exploration/: package.xml  setup.cfg  setup.py
src/freebrain_memory/: package.xml  setup.cfg  setup.py
src/freebrain_metacog/: package.xml  setup.cfg  setup.py
src/freebrain_motor/: package.xml  setup.cfg  setup.py
src/freebrain_motor/freebrain_motor/: __init__.py  kinematics.py  motor_node.py  ros2_control_client.py
src/freebrain_motor/test/: test_kinematics.py  test_ros2_control_client.py
src/freebrain_msgs/: CMakeLists.txt  package.xml
src/freebrain_msgs/action/: TrainSkill.action
src/freebrain_msgs/msg/: CognitiveGoal.msg  DetectedObject.msg  DevelopmentalState.msg  SafetyStatus.msg  SceneGraph.msg
src/freebrain_msgs/srv/: DecomposeTask.srv  ExecuteSkill.srv  GenerateReward.srv  QueryMemory.srv  StoreMemory.srv
src/freebrain_perception/: package.xml  setup.cfg  setup.py
src/freebrain_safety/: package.xml  setup.cfg  setup.py
src/freebrain_sim/: package.xml  setup.cfg  setup.py
src/freebrain_skills/: package.xml  setup.cfg  setup.py
(+12 files in other folders)
